<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_social"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.sumukhshiv.mdbsocials.NewSocialActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextEventName"
        android:hint="@string/name_of_event"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDescription"
        android:hint="@string/description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDate" />

    <Button
        android:text="@string/upload_a_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUploadPicture"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:id="@+id/editTextDate"
        android:hint="@string/date"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEventName"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <ImageView
        app:srcCompat="@drawable/common_full_open_on_phone"
        android:id="@+id/imageViewUploadPhoto"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadPicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonUploadPicture" />

    <Button
        android:text="@string/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPost"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        style="@style/Widget.AppCompat.Button.Colored" />

</android.support.constraint.ConstraintLayout>
