<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.sumukhshiv.mdbsocials.SignUpActivity">

    <TextView
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignUpTitle"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmailSignUp"
        android:hint="@string/email2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordSignup"
        android:hint="@string/password2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmailSignUp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPasswordGraphic"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignup"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPasswordSignup" />

    <Button
        android:text="@string/register2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegisterSignUp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordStrengthIndicator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPasswordStrengthIndicator"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordGraphic"
        app:layout_constraintLeft_toLeftOf="@+id/textViewPasswordGraphic" />

</android.support.constraint.ConstraintLayout>
